@@ -25,32 +25,63 @@ Part 4 is a chance to use Panama APIs to allow C code to talk to Java code.
 https://github.com/carldea/panama4newbies/tree/main/part04
 
 
+## Requirements
+1. Java JDK 25+
+2. JExtract 25+ https://jdk.java.net/jextract/
+3. Clang
 
-## Setting up your IDE 
-1. Make sure you know where you've downloaded the Panama Early Access Build and directory.
-2. Setup environment variables and run the following:
+### Installing C compiler
+#### MacOs
+```bash
+xcode-select --install
+````
+#### Debian
+```bash
+sudo apt update
+sudo apt install clang
+```
+#### Fedora/RHEL:
+```bash
+# For RHEL 8 or newer/Fedora
+sudo dnf install clang
+```
+```bash
+# Or using yum for older RHEL versions
+sudo yum install llvm-toolset
+```
+#### Arch Linux
+```bash
+sudo pacman -S clang
+```
+
+#### Windows MSYS2 package manager
+```bash
+pacman -S mingw-w64-clang-x86_64-clang
+```
+
+## Setting up your environment
+1. Download Jextract for your OS (https://jdk.java.net/jextract/) and unzip to a directory.
+2. Download JDK for your OS (https://www.azul.com/downloads/?package=jdk#zulu)
+3. Setup environment variables `JAVA_HOME` and `JEXTRACT_HOME` and run the following:
+ 
+View and modify the file `setup.sh`.
+```bash
+JEXTRACT_HOME="<path to jextract>" sh setup.sh
+```
+
+**Note/Warning**: The `setup.sh` script is for your convenience, but feel free to skip to the next section if you already installed your JDK and Jextract downloads and setup things to your liking. 
+
+Assuming things are set up you should verify with the following commands:
 ```shell
 $ java -version
 $ jextract -h 
 ```
-3. Change directories to Part01 as a project you'll want to setup as the working directory.
-4. Run script to jextract for part 1
-```shell
-$ ./jextract_HelloWorld.java.sh
+
+## Getting Started:
+1. Clone this project 
 ```
-5. Create/Open an IntelliJ project in that directory.
-6. Setup up JDK File -> Project Structure -> Project SDK
-   Select the downloaded the early access JDK from https://jdk.java.net/panama/
-   
-   ![Panama Builds](https://github.com/carldea/panama4newbies/raw/main/IntelliJ-PanamaJDK.png)
-
-7. In preferences you'll need to add  --add-modules jdk.incubator.foreign.
-
-IntelliJ you'll need to do the following:
-
-![Add modules](https://github.com/carldea/panama4newbies/raw/main/IntelliJ-Preferences.png)
-
-8. Ensure that directory `generated/src` is marked as generated sources root.
-9. Setup Run configurations and JVM options 
-
-![Add JVM Options](https://github.com/carldea/panama4newbies/raw/main/IntelliJ-RunConfiguration.png)
+git clone git@github.com:carldea/panama4newbies.git
+```
+2. Change directory to **panama4newbies/Part01**.
+3. Go to Part 1 and follow the steps ([readme.md](https://github.com/carldea/panama4newbies/blob/main/part01/README.md))
+4. Blog article can be found here: - Part 1  https://foojay.io/today/project-panama-for-newbies-part-1
